[3 - 4단계 방탈출 예약 대기] 잉크(이예찬) 미션 제출합니다. (#129)
* fix: 파라미터 인자 순서 변경

* feat: 3단계 예약 대기 기능 구현

* feat: 4단계 예약 대기 관리 구현

* refactor: 메서드 이동

* chore: 개행

* chore: 주석제거

* refactor: 컨벤션 통일

* refactor: 삭제 시 본인 검증

* refactor: 예약 dto 병합

* refactor: MemberArgumentResolver 병합

* refactor: Transactional 어노테이션 추가

* refactor: 과거 시간대 비교 개선

* fix: 트랜잭션 옵션 수정

* refactor: dto -> 도메인으로 변경

* refactor: 변수명 변경

* refactor: 시간 비교 Instant 사용

* refactor: 예약대기 시 이미 예약 이력 검증 추가

* refactor: 과거 예약 검증 위치 변경